Fixed known bugs: * Clicking category list does not correctly render cat list view * Clicking cat name in post list should link to cat page * Timestamps not showing minutes correctly * Timestamps should display AM/PM * Add Comment dialog does not clear on submission * Comment count does not update on comment creation * Misc CSS cleanup

--- a/front-end/src/css/index.css
+++ b/front-end/src/css/index.css
@@ -23,6 +23,9 @@ textarea.postEntry {
     border: 1px solid black;
     padding:10px;
 }
+.postDetail{
+    margin-bottom:15px;
+}
 .controlIcon{
     cursor:pointer;
     padding:0 5px;
@@ -38,4 +41,12 @@ textarea.postEntry {
 }
 .commentInputControls{
     margin-top:5px;
+}
+.commentPostedBy{
+    font-size: 10px;
+    font-style: italic;
+}
+.postedBy{
+    font-size: 12px;
+    font-style: italic;
 }
